--- a/app/assets/javascripts/nav/_nav.html
+++ b/app/assets/javascripts/nav/_nav.html
@@ -17,10 +17,25 @@
         </a>
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
+                <li ng-hide="signedIn()" class="dropdown">
+                    <a href="#/login">
+                        <i class="fa fa-sign-in"></i>
+                        Sign In
+                    </a>
+                </li>
+
+                <li ng-hide="signedIn()" class="dropdown">
+                    <a href="#/register">
+                        <i class="fa fa-edit"></i>
+                        Register
+                    </a>
+
+                </li>
+
                 <!-- Messages: style can be found in dropdown.less-->
-                <li class="dropdown messages-menu">
+                <li ng-show="signedIn()" class="dropdown messages-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="fa fa-envelope-o"></i>
+                        <i class="fa fa-comment-o"></i>
                         <span class="label label-success">4</span>
                     </a>
                     <ul class="dropdown-menu">
@@ -47,10 +62,10 @@
                 </li>
 
                 <!-- User Account: style can be found in dropdown.less -->
-                <li class="dropdown user user-menu">
+                <li ng-show="signedIn()" class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="../../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                        <span class="hidden-xs">Alexander Pierce</span>
+                        <span class="hidden-xs"> {{ user.email }} </span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
