- Feature: Put login page in the right style

--- a/app/assets/javascripts/home/_home.html
+++ b/app/assets/javascripts/home/_home.html
@@ -1,2 +1,10 @@
-<h2> {{ title }} </h2>
-<small> {{ subtitle }} </small>
+<div class="wrapper">
+
+    <div ng-include="'generic/_left_aside.html'"></div>
+    <div ng-include="'nav/_nav.html'"></div>
+
+    <div class="content-wrapper">
+        <section class="content">
+        </section>
+    </div>
+</div>
