--- a/app/assets/javascripts/auth/_login.html
+++ b/app/assets/javascripts/auth/_login.html
@@ -1,13 +1,31 @@
-<div class="page-header">
-    <h1>Log In</h1>
-</div>
+<div class="login-box">
+    <div class="login-logo">
+        <a href="../../index2.html"><b>Lead</b>Tree</a>
+    </div>
 
-<form ng-submit="login()">
-    <div class="input-group">
-        <input type="email" class="form-control" placeholder="Email" ng-model="user.email">
-    </div>
-    <div class="input-group">
-        <input type="password" class="form-control" placeholder="Password" ng-model="user.password">
-    </div>
-    <input type="submit" class="btn btn-default" value="Log In">
-</form>
+    <div class="login-box-body">
+        <p class="login-box-msg">Sign in to start your session</p>
+
+        <form ng-submit="login()">
+            <div class="form-group has-feedback">
+                <input type="email" class="form-control" placeholder="Email" ng-model="user.email">
+                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <input type="password" class="form-control" placeholder="Password" ng-model="user.password">
+                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+            </div>
+            <div class="row">
+                <div class="pull-right">
+                    <div class="col-xs-12">
+                        <input type="submit" class="btn btn-primary" value="Log In">
+                    </div>
+                </div>
+            </div>
+        </form>
+
+        <a href="#">I forgot my password</a><br>
+        <a href="/#/register" class="text-center">Register a new membership</a>
+
+    </div><!-- /.login-box-body -->
+</div>
